# Camera2

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/android/camera2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/adobe/xmp/: XMPMeta.java
app/src/main/java/com/android/ex/camera2/portability/: AndroidCameraAgentImpl.java
app/src/main/java/com/android/ex/camera2/utils/: Camera2CaptureCallbackForwarder.java  Camera2RequestSettingsSet.java
doc/: app 版本号含义.md
gradle/wrapper/: gradle-wrapper.properties
